--- a/Addressbook.Web/Content/Site.css
+++ b/Addressbook.Web/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Calibri;
 }
 
 /* Set padding to keep content from hitting the edges */
