--- a/Addressbook.Web/Views/Account/Login.cshtml
+++ b/Addressbook.Web/Views/Account/Login.cshtml
@@ -1,28 +1,29 @@
-﻿
+﻿@*@model Addressbook.Web.Models.LoginModel*@
+@model LoginModel
 @{
     ViewBag.Title = "Login";
 }
 
 <h2>Login</h2>
 
-<form class="form-horizontal">
+<form class="form-horizontal" action="" method="post">
     <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address" })
         </div>
     </div>
     <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"> Remember me
+                    @Html.CheckBoxFor(m => m.RememberMe) Remember me
                 </label>
             </div>
         </div>
