--- a/Addressbook.Web/Views/Shared/_Layout.cshtml
+++ b/Addressbook.Web/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                    <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>
                 </ul>
             </div>
         </div>
