feat: V008 003 rb add role based authentication 7.32

--- a/Addressbook.Web/Views/Shared/_Layout.cshtml
+++ b/Addressbook.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Login", "Login", "Account")</li>
                     <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>
+                    <li>@Html.ActionLink("Admin", "Admin", "Home")</li>
                 </ul>
             </div>
         </div>
